:construction:[MERGE] MERGE ALPHA INTO MASTER

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,27 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# Ignore les fichiers générés par Next.js
+.next/
+out/
+# Ignore les fichiers de build
+/.next/
+# Ignore les fichiers de cache
+/.npm
+/.yarn
+/.cache
+/.vscode
+/.idea
+# Ignore les fichiers de logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# Ignore les fichiers temporaires
+*.pem
+# Ignore les fichiers de configuration locaux
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+# Ignore les fichiers de sauvegarde de l'éditeur
+*~
