--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react": "^18",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
-    "react-toast-notifications": "^2.5.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
