--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.9.2",
     "next": "14.2.0",
     "react": "^18",
     "react-datepicker": "^6.6.0",
@@ -22,6 +24,10 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.0"
   }
