--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.15",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.2",
+    "framer-motion": "^11.2.7",
     "next": "14.2.0",
     "react": "^18",
     "react-datepicker": "^6.6.0",
